overflow fix

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    margin: 0;
 }
 
 section {
